--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get_it: ^7.7.0
   mobx: ^2.0.4
   flutter_mobx: ^2.0.2
+  mask_text_input_formatter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
