--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   mobx: ^2.0.4
   flutter_mobx: ^2.0.2
   mask_text_input_formatter: ^2.9.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
