--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_mobx: ^2.0.2
   mask_text_input_formatter: ^2.9.0
   url_launcher: ^6.3.0
+  cloud_firestore: ^5.0.1
+  firebase_core: ^3.1.0
 
 dev_dependencies:
   flutter_test:
